--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "deploy": "./scripts/build_and_update_python_package.sh",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +36,7 @@
     "@types/d3": "5.7.0",
     "@types/jasmine": "~5.1.0",
     "@types/three": "0.134.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
