--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -8,7 +8,7 @@
     "deploy": "./scripts/build_and_update_python_package.sh",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "cd ../../ && git config --local core.hooksPath .githooks/"
+    "prepare": "git config --local core.hooksPath .githooks/"
   },
   "private": true,
   "dependencies": {
