--- a/.github/workflows/build-single-adapter.yml
+++ b/.github/workflows/build-single-adapter.yml
@@ -5,7 +5,7 @@
 # https://yaml-online-parser.appspot.com/
 #
 
-name: PyPI Build Single Platform & Python Version Adapters
+name: PyPI - Build Single Platform & Python Version Adapters
 
 on:
   workflow_dispatch:
