--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^20.1.2",
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
+    "@dagrejs/graphlib": "^2.2.4",
     "d3": "5.7.0",
     "rxjs": "~7.8.0",
     "safevalues": "^1.0.1",
