--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -16,25 +16,30 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
     steps:
-      - uses: actions/checkout@v4
-      - name: version tag
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Get version tag
         id: version-tag
         run: |
           tag="0.0.$(date +"%Y%m%d%H%M%S")"
           echo "tag=$tag" >> $GITHUB_OUTPUT
+
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install wheel numpy twine
+        run: python -m pip install --upgrade pip setuptools wheel numpy twine
+
       - name: Build Package
         run: |
           cd ./src/builtin-adapter
           ./python/pip_package/build_pip_package.sh ${{ steps.version-tag.outputs.tag }}
+
       - name: Verify the Distribution
         run: twine check ./src/builtin-adapter/gen/adapter_pip/dist/*
+
       - name: Check Directory Output
         run: ls -l ./src/builtin-adapter/gen/adapter_pip/dist/*.whl
