--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -40,7 +40,11 @@
     "@types/d3": "5.7.0",
     "@types/jasmine": "~5.1.0",
     "@types/three": "0.134.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "esbuild": "^0.25.0",
+    "eslint": "^9.35.0",
+    "globals": "^16.4.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
