--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
     "d3": "5.7.0",
+    "monaco-editor": "^0.55.0-rc",
     "rxjs": "~7.8.0",
     "safevalues": "^1.0.1",
     "shiki": "^3.4.0",
