--- a/src/ui/angular.json
+++ b/src/ui/angular.json
@@ -35,7 +35,10 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "webWorkerTsConfig": "tsconfig.worker.json"
+            "webWorkerTsConfig": "tsconfig.worker.json",
+            "loader": {
+              ".ttf": "binary"
+            }
           },
           "configurations": {
             "production": {
