feat: add mechanisms to wire textmate grammar

--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -26,6 +26,9 @@
     "@angular/router": "^20.1.2",
     "d3": "5.7.0",
     "monaco-editor": "^0.55.0-rc",
+    "monaco-editor-textmate": "^4.0.0",
+    "monaco-textmate": "^3.0.1",
+    "onigasm": "^2.2.5",
     "rxjs": "~7.8.0",
     "safevalues": "^1.0.1",
     "three": "0.134.0",
