--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -25,7 +25,6 @@
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
     "d3": "5.7.0",
-    "monaco-editor": "^0.55.0-rc",
     "rxjs": "~7.8.0",
     "safevalues": "^1.0.1",
     "three": "0.134.0",
@@ -46,6 +45,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "modern-monaco": "^0.3.2",
+    "monaco-editor": "^0.55.1",
     "rollup": "^4.21.3",
     "typescript": "~5.8.3"
   },
